--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
         
         footer {
         z-index: 2;
-        font-family: Fantasy;
+        font-family: monospace;
         font-size: 40px;
         margin-top: auto;
         color: rgb(255, 255, 255);
@@ -250,7 +250,7 @@
         </div>
     
         <div class="image"><img src="p1.png" id="active"></div>
-        <footer>@TECHWORK | 01/24/26</footer>
+        <footer>@TECH-WEB-SNAP | 01/24/26</footer>
     </body>
     <script>
         function Change(character){
