--- a/index.html
+++ b/index.html
@@ -210,9 +210,9 @@
         padding: 10px;
         }
 
-        /*div{
-            border: red 10px solid;
-        }*/
+        main{
+            margin-top: 30%;
+        }
 
         @media screen and (min-device-width: 1200px) {
             .image{ 
@@ -221,6 +221,7 @@
         }
     </style></head>
     <body>
+        <main>
         <img src="filter.jpg" class="filter"> 
         <img src="star2.png" class="star-1">
         <img src="star2.png" class="star-2">
@@ -250,7 +251,8 @@
         </div>
     
         <div class="image"><img src="p1.png" id="active"></div>
-        <footer>@TECH-WEB-SNAP | 01/24/26</footer>
+        <footer>@THE_JAVA_CLICKS | 01/24/26</footer>
+        </main>
     </body>
     <script>
         function Change(character){
@@ -279,3 +281,4 @@
         }
     </script>
 </html>
+
